# Plonky3

./: AIRCOV.md  FROZEN_METRIC_v1.md  README.md
air/: Cargo.toml
air/src/: aircov.rs  builder.rs  check_constraints.rs  filtered.rs  lib.rs
air/tests/: aircov_exploit.rs  aircov_fib.rs  aircov_heldout.rs  aircov_sp1_expbits.rs
