[package]
name = "p3-air"
description = "Defines the Algebraic Intermediate Representation (AIR) interface and supporting utilities for STARK provers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[features]
# AIRCov semantic-coverage recorder (pulls in std for a thread-local). Off by
# default so normal builders stay no_std and pay nothing.
aircov = []

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-field = { path = "../field" }
p3-mersenne-31 = { path = "../mersenne-31" }
serde_json.workspace = true

[lints]
workspace = true
